# depotru_database

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  =0.5.3  AGENTS.md  CHANGELOG.md  Containerfile  DEPOSITO_TRUJILLO_INVESTIGATION.md  GITHUB_ACTIONS_SETUP.md  MANIFEST.in  Makefile  PRODUCTION_READINESS_ANALYSIS.md  README.md  REPORTE_SIKA_ESPANOL.md  SECURITY_FIXES.md  SIKA_ANALYSIS_REPORT.md  SIKA_PROVIDER_VERIFICATION.md  WORKFLOW_CLEANUP_GUIDE.md  business-analyzer-api.service  business-analyzer-container.service  business-analyzer-mssql.service  business-analyzer.service  check-status.sh  check_document_codes.py  claude.md  deploy-production.sh  diagnose_and_fix_css.py  environment.yml  generate_report.py  generate_sika_report.py  generate_sika_report_es.py  proposed-test-workflow.yml  pyproject.toml  pytest.ini  requirements.txt  run_analysis.py  run_tests.py  setup-firewall.sh  (+5 more)
.agents/: config.template.yml
.agents/claude/: CLAUDE.md
.agents/gemini/: GEMINI.md
.agents/opencode/: SISYPHUS.md
.github/: COPILOT_INSTRUCTIONS.md  QUICK_REFERENCE.md  RELEASE_TEMPLATE.md
.github/agents/: README.md  business-data-analyzer.agent.md
.github/workflows/: README.md  ci.yml  claude-code-review.yml  codeql-analysis.yml  database-analysis.yml  dependency-review.yml  python-package-conda.yml  test-vanna-grok.yml  tests.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: f1-plan-compliance-audit.md  f2-code-quality-review.md  f3-real-manual-qa.md  f4-scope-fidelity-check.md  task-1-baseline-error.txt  task-1-baseline-pytest.txt  task-2-quality-gate-error.txt  task-2-quality-gate.txt  task-3-contract-parity-error.txt  task-3-contract-parity.txt  task-4-analytics-parity-error.txt  task-4-analytics-parity.txt  task-5-data-access-smoke-error.txt  task-5-data-access-smoke.txt  task-6-report-smoke-error.txt  task-6-report-smoke.txt  task-7-provider-matrix-error.txt  task-7-provider-matrix.txt  task-8-docs-consumers-error.txt  task-8-docs-consumers.txt
.sisyphus/plans/: repo-next-steps-roadmap.md
benchmarks/: performance_benchmark.py
data/: database_explained.json
data/sql/: affinity_indexes_and_mart.sql
deploy/: depotru-schedule.cron.example
deploy/bff/: README.md  depotru-bff-tunnel.service  depotru-bff.service  env.bff.example
deploy/systemd/: depotru-website-stock-allowlist.service  depotru-website-stock-allowlist.timer
docs/: AI_AGENT_INSTRUCTIONS.md  ANACONDA_TESTING.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CONTRIBUTING.md  MULTI_AGENT_SETUP.md  PERFORMANCE.md  PLATFORM.md  PR_WORKFLOW.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  SECURITY.md  TESTING.md  VANNA_COMPARISON.md  setup_instructions.md
docs/ai-context/: README.md  claude_depotru.md  grok_depotru.md
docs/architecture/: modular-design.md
docs/archive/: GITHUB_ACTIONS_SETUP.md  IMPROVEMENT_ANALYSIS.md  METABASE_TROUBLESHOOTING.md  P0_FIXES_APPLIED.md  QUICK_START_IMPROVEMENTS.md  START_HERE.md  VANNA_BEAUTIFUL_OUTPUT.md  VANNA_SETUP.md
docs/reference/: j3system-sales-warehouse-query.md  website-warehouse-allowlist.md
examples/: improvements_p0.py  pandas_approach.py  streamlit_dashboard.py
mcp/: README.md  example.grok-config.toml
reports/: AFFINITY_E2E_DRY_RUN_affinity-e2e-20260709-remote.md  AFFINITY_E2E_DRY_RUN_affinity-e2e-20260709.md  ANALYSIS_REPORT.md  CODE_HYGIENE_VENDOR_DUALS_2026-07.md  CONTABILIDAD_2024-05-31.md  CONTABILIDAD_2024-12-31.md  COTIZACION_FUNNEL_2024-12-31.json  COTIZACION_FUNNEL_2024-12-31.md  COTIZACION_FUNNEL_2025-01-31.json  COTIZACION_FUNNEL_2025-01-31.md  COTIZACION_FUNNEL_2025-01-31_E2E.json  CRITICAL_INVENTORY_2024-12-31.md  DATABASE_TABLE_ANALYSIS_RECOMMENDATIONS.md  DEVOLUCIONES_CONCILIACION_2024-12-31.md  FACTURA_ELECTRONICA_2024-12-31.md  KPI_CONTROL_BOARD_2026_W27.md  KPI_CONTROL_BOARD_TEST.md  OTIF_2024-12-31.md  PRESUPUESTO_H2_APPLY_CURRENT.md  PRESUPUESTO_H2_BLURB_COMERCIAL.md  PRESUPUESTO_H2_COMPARE_TWOPOT.md  PRESUPUESTO_H2_COMPARE_TWOPOT_LOCKCURRENT.md  PRESUPUESTO_H2_GO_LIVE_CHECK.md  README.md  REPORTE_SIKA_ESPANOL.md  SIKA_ANALYSIS_REPORT.md  TESTING_SUMMARY.md  VENDOR_CODE_PURITY_202606.md  VENDOR_CODE_PURITY_last7d.md  crosssell-merge-affinity-e2e-20260709-remote-APPLY.json  crosssell-merge-affinity-e2e-50sku-APPLY.json  report_diciembre_2024.html  report_diciembre_2024_ai.html  report_mayo_2024.html  report_mayo_2024.json  report_mayo_2024_ai.html  report_mayo_2024_completo.html  report_mayo_2024_completo_updated.html  report_mayo_2024_updated.json  report_mayo_2024_updated.txt
reports/data/: analysis_report.json  sika_analysis_report.json
scripts/: README.md  agent_router.py  install-agents.sh  verify_chart_heuristics.py  verify_sql_routing.py
scripts/analysis/: check_document_codes.py  export_magento_related_crosssell.py  generate_sika_report.py  investigate_deposito.py  kpi_sql_pack.sql.template  refresh_affinity_mart.py  run_affinity_magento_e2e_dry_run.py  run_analysis.py  run_contabilidad.py  run_cotizacion_funnel.py  run_critical_inventory.py  run_devoluciones_conciliacion.py  run_factura_electronica.py  run_otif.py  sika_analysis.py
scripts/ops/: install_stable_bff.sh  install_website_stock_timer.sh  run_bff_tunnel.py  run_website_stock_allowlist_sync.py  setup_named_tunnel.sh
scripts/reports/: generate_report.py  generate_sika_report.py  generate_sika_report_es.py  run_scheduled_monthly_report.py
scripts/utils/: anomaly_worker.py  autoresearch_to_vanna.py  diagnose_and_fix_css.py  retrain_vanna.py  (+15 more)
src/: __init__.py  api.py  business_analyzer_combined.py  config.py  vanna_chat.py  vanna_grok.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_behavior_baseline_smoke.py  test_business_analyzer_combined.py  test_business_metrics.py  test_config.py  test_config_full.py  test_data_access_boundaries.py  test_error_handling.py  test_formatting.py  test_j3system_sales_warehouse_doc.py  test_metabase_connection.py  test_reporting_visualization.py  test_row_contracts.py  test_sql_injection_prevention.py  test_vanna_grok.py  test_vanna_provider_factory.py  test_vanna_public_surface.py
(+232 files in other folders)
