# ============================================================================
# Business Data Analyzer - pyproject.toml
# Comprehensive Python project configuration following PEP 621
# ============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata (PEP 621)
# ============================================================================

[project]
name = "business-data-analyzer"
version = "2.0.0"
description = "Comprehensive business intelligence platform for hardware store operations with AI-powered natural language SQL queries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Business Data Analyzer Team"},
]
keywords = [
    "business-intelligence",
    "data-analysis",
    "sql",
    "natural-language",
    "ai",
    "grok",
    "vanna",
    "analytics",
    "retail",
    "hardware-store",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Natural Language :: Spanish",
]

# Core Dependencies
# ============================================================================
dependencies = [
    # Database
    "pymssql>=2.2.8",
    "pyodbc>=4.0.0",
    "sqlalchemy>=2.0.0",

    # Environment & Configuration
    "python-dotenv>=0.19.0",

    # Data Analysis & Processing
    "pandas>=1.5.0",
    "numpy>=1.21.0",

    # Visualization
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "seaborn>=0.12.0",

    # Web Framework
    "streamlit>=1.20.0",
    "flask>=2.0.0",
    "waitress>=2.1.0",
    "flasgger>=0.9.5",
    "flask-sock>=0.5.3",

    # AI/ML - Natural Language to SQL
    "vanna>=0.3.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",

    # Encryption/Decryption
    "pycryptodome>=3.15.0",

    # Database Tools
    "metabase-api>=0.3.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",

    # Export & Reporting
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "reportlab>=3.6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.12.0",
    "pre-commit>=2.20.0",
]

# Jupyter notebook support
jupyter = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
]

# All extras combined
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.12.0",
    "pre-commit>=2.20.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
# CLI Entry Points
business-analyzer = "src.business_analyzer_combined:main"
vanna-grok = "src.vanna_grok:main"
vanna-chat = "src.vanna_grok:main"

[project.urls]
Homepage = "https://github.com/Trujillofa/coding_omarchy"
Documentation = "https://github.com/Trujillofa/coding_omarchy/blob/main/docs/START_HERE.md"
Repository = "https://github.com/Trujillofa/coding_omarchy"
"Bug Tracker" = "https://github.com/Trujillofa/coding_omarchy/issues"

# ============================================================================
# Setuptools Configuration
# ============================================================================

[tool.setuptools]
packages = ["src", "src.utils"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"" = ["*.json", "*.md", "*.txt", "*.yaml", "*.yml"]

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Test paths
testpaths = ["tests"]
pythonpath = ["src"]

# Output options
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring database",
    "slow: Slow running tests",
    "requires_db: Tests that require database connection",
    "requires_api: Tests that require API keys",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ============================================================================
# Black Configuration
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
  | env
)/
'''

# ============================================================================
# isort Configuration
# ============================================================================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "venv",
    "env",
]
known_first_party = ["src"]

# ============================================================================
# mypy Configuration
# ============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Module-specific settings
[[tool.mypy.overrides]]
module = [
    "pymssql.*",
    "pyodbc.*",
    "vanna.*",
    "chromadb.*",
    "matplotlib.*",
    "plotly.*",
    "seaborn.*",
    "streamlit.*",
    "flask.*",
    "waitress.*",
    "flasgger.*",
    "reportlab.*",
    "openpyxl.*",
    "xlsxwriter.*",
]
ignore_missing_imports = true

# ============================================================================
# Flake8 Configuration (via flake8-pyproject)
# ============================================================================

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "W503",  # Line break before binary operator (conflicts with black)
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
    "env",
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
]

# ============================================================================
# Pre-commit Configuration
# ============================================================================

[tool.pre-commit]
# Note: Full pre-commit config is in .pre-commit-config.yaml
# This section documents the hooks used
# - black: Code formatting
# - isort: Import sorting
# - flake8: Linting
# - mypy: Type checking
# - pytest: Test running

# ============================================================================
# Development Notes
# ============================================================================
#
# Installation:
#   pip install -e ".[dev]"        # Development install
#   pip install -e ".[all]"         # All extras
#   pip install -e ".[jupyter]"     # With Jupyter support
#
# Usage:
#   business-analyzer --help        # Run main analyzer
#   vanna-grok                      # Run Grok AI interface
#   vanna-chat                      # Run multi-provider AI interface
#
# Testing:
#   pytest                          # Run all tests
#   pytest --cov                    # Run with coverage
#   pytest -m unit                  # Run unit tests only
#
# Code Quality:
#   black src/ tests/               # Format code
#   isort src/ tests/               # Sort imports
#   flake8 src/ tests/              # Lint code
#   mypy src/                       # Type check
#
# ============================================================================
